--- a/CS222_assignment4_5140309507_林禹臣/CS222_assignment4_5140309507_林禹臣.tex
+++ b/CS222_assignment4_5140309507_林禹臣/CS222_assignment4_5140309507_林禹臣.tex
@@ -8,9 +8,9 @@
 \usepackage[usenames]{xcolor}
 \usepackage{hyperref}
 %\usepackage{algorithm}
-%\usepackage{algorithmic}
+%\usepackage{algorithmi
 %\usepackage[vlined,ruled,commentsnumbered,linesnumbered]{algorithm2e}
-\usepackage[ruled,lined,boxed,linesnumbered]{algorithm2e}
+\usepackage[ruled,vlined,boxed,linesnumbered]{algorithm2e}
 
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{lemma}[theorem]{Lemma}
@@ -43,27 +43,16 @@
 %========================================================================
 \noindent\framebox[\linewidth]{\shortstack[c]{
 \Large{\textbf{CS222 Homework 4}}\vspace{1mm}\\
-Exercises for Algorithm Design and Analysis by Li Jiang, 2016 Autumn Semester}}
+Exercises for Algorithm Design and Analysis by Li Jiang, 2016 Autumn Semester\\
+5140309507 林禹臣 yuchenlin@sjtu.edu.cn}}
+
+
 ~\\
 \begin{enumerate}
 
 \item Given a non-empty integer array, find the minimum number of moves required to make all array elements equal, where a move is incrementing a selected element by 1 or decrementing a selected element by 1.
 
 You may assume the array's length is at most 10,000.
-
-Example:
-
-Input:
-[1,2,3]
-
-Output:
-2
-
-Explanation:
-
-Only two moves are needed (remember each move increments or decrements one element):
-
-$[1,2,3] => [2,2,3] => [2,2,2]$
 
 Input:
 
@@ -76,6 +65,55 @@ Output:
 int minMoves.
 
 %Your answer should be written here.
+
+\begin{solution}
+Let us formulate this problem first. Function $F(T)$ to indicate the total movements when the final equal number is $T$. So we have:\\
+\begin{equation*}
+F(T)= \sum_{i=1}^{N}|x_i-T|
+\end{equation*}
+
+The problem is to find the minimum of the $F(T)$. This reminds me of one of the most important properties of median: \begin{bf}{Median minimizes the sum of Absolute Deviations}. \end{bf} I would like to prove it later. Now if we all agree with the statement, what we should do next is very simple:\\\\
+\emph{Step 1.} Find the median $M$ of the array.\\
+\emph{Step 2.} Calculate $F(M)$.\\
+\emph{Step 3.} Return $F(M)$ as the final result.\\
+
+The time complexity of \emph{Step 1} can be $O(n)$ with a divide-and-conquer strategy, which I have mentioned in the \emph{Assignment 2}. The time complexity of \emph{Step 2} is obviously $O(n)$ and \emph{Step 3} is $O(1)$. Therefore, the total time complexity is $O(n)$.
+
+Now, let us prove the above-mentioned statement that Median minimizes the sum of Absolute Deviations.\\
+First of all, I would like to point out some wrong or weak statements. Some say that we must choose the final $T$ from the elements in the array to minimize the $F(T)$, which is definitely wrong for that if the length is even and then we can choose any number between the middle two elements as the final T. Also, some say that choosing average can cause wrong output, then median is the optimal choice. It is just a guess, not a mathematical proof.\\
+
+\begin{bf}Proof 1.\end{bf} Here, I would firstly use derivatives to illustrate why median is optimal choice and provide another proof with basic maths.
+We all know:
+\begin{equation*}
+	\frac{d|x|}{dx}=sgn(x)
+\end{equation*}
+Thus,
+\begin{equation*}
+	\frac{dF}{dx}=\sum_{i=1}^{N} sgn(x_i)
+\end{equation*}
+We should notice that in derivative is $0$ only if the number of positive elements is equal to the number of negative elements. Meanwhile, $x=median$ can make sure that the number of elements which are less than median and the number of elements which are greater than median is equal. Plus, if $x<median$ and then the derivative is negative; if $x>median$ and then the derivative is positive.\\Thus, median is an optimal solution.\\
+
+\begin{bf}Proof 2.\end{bf}  is as follows: 
+Suppose the length is odd and $T \le M$.
+We can conclude that:\\
+\begin{equation*}
+x_1 \le x_2 \le ... \le x_s\le... \le T \le...\le x_{t-1} \le x_t = M \le x_{t+1} \le ...\le x_N ~~~(t=\frac{n-1}{2})
+\end{equation*}
+\begin{flalign}
+\begin{split}
+&F(T)= \sum_{i=1}^{N}(x_i-T)\\ 
+&= \sum_{i=1}^{s}(T-x_i) + \sum_{i=s+1}^{N}(x_i-T) \\
+&= [\sum_{i=1}^{t-1}(T-x_i) - \sum_{i=s+1}^{t-1}(T-x_i)] + [\sum_{i=s+1}^{t-1}(x_i-T) + 0 + \sum_{i=t+1}^{N}(x_i-T) ]\\
+&= [\sum_{i=1}^{t-1}(T-M+M-x_i) - \sum_{i=s+1}^{t-1}(T-x_i)] + [\sum_{i=s+1}^{t-1}(x_i-T) + \sum_{i=t+1}^{N}(x_i-M+M-T)]\\
+&= \sum_{i=1}^{t-1}(M-x_i) + (t-1)(T-M) + 2\sum_{i=s+1}^{t-1}(x_i-T) + \sum_{i=t+1}^{N}(x_i-M)+(n-t)(M-T)\\
+&= \sum_{i=1}^{t-1}(M-x_i) +  \sum_{i=t+1}^{N}(x_i-M) + 2\sum_{i=s+1}^{t}(x_i-T) + (n-2t+1)(M-T)\\
+&= \sum_{i=1}^{t-1}(M-x_i) +  \sum_{i=t+1}^{N}(x_i-M) + 2\sum_{i=s+1}^{t}(x_i) - 2(t-s)*T\\
+\end{split}&
+\end{flalign}
+Thus, if we want to minimize the $F(T)$, we just need to maximize $T$, which means when $T=M$ we can get the minimum of $F(T)$.
+
+\end{solution}
+\pagebreak
 
 ~\\
 ~\\
