--- a/CS222_assignment4_5140309507_林禹臣/CS222_assignment4_5140309507_林禹臣.tex
+++ b/CS222_assignment4_5140309507_林禹臣/CS222_assignment4_5140309507_林禹臣.tex
@@ -81,6 +81,8 @@ The time complexity of \emph{Step 1} can be $O(n)$ with a divide-and-conquer str
 
 Now, let us prove the above-mentioned statement that Median minimizes the sum of Absolute Deviations.\\
 First of all, I would like to point out some wrong or weak statements. Some say that we must choose the final $T$ from the elements in the array to minimize the $F(T)$, which is definitely wrong for that if the length is even and then we can choose any number between the middle two elements as the final T. Also, some say that choosing average can cause wrong output, then median is the optimal choice. It is just a guess, not a mathematical proof.\\
+\pagebreak
+\\\\
 
 \begin{bf}Proof 1.\end{bf} Here, I would firstly use derivatives to illustrate why median is optimal choice and provide another proof with basic maths.
 We all know:
