--- a/CS222_assignment4_5140309507_林禹臣/CS222_assignment4_5140309507_林禹臣.tex
+++ b/CS222_assignment4_5140309507_林禹臣/CS222_assignment4_5140309507_林禹臣.tex
@@ -122,22 +122,7 @@ Thus, if we want to minimize the $F(T)$, we just need to maximize $T$, which mea
 
 \item Given a string that consists of only uppercase English letters, you can replace any letter in the string with another letter at most k times. Find the length of a longest substring containing all repeating letters you can get after performing the above operations.
     
-Note:Both the string's length and k will not exceed 104.
-
-Example:
-
-Input:
-
-s = "AABABBA", k = 1
-
-Output:
-
-4
-
-Explanation:
-
-Replace the one 'A' in the middle with 'B' and form "AABBBBA".
-The substring "BBBB" has the longest repeating letters, which is 4.
+Note:Both the string's length and k will not exceed $10^4$.
 
 Input:
 
